# easy-git

./: .easy-git-config  Cargo.toml  README.md  install.ps1  install.sh  makefile
src/: config.rs  main.rs  utils.rs
