[package]
name = "easy-git"
version = "0.1.0"
authors = ["gildembergleite <gildembergleite@gmail.com>"]
edition = "2021"
description = "Uma ferramenta interativa para gerenciar usuários Git em repositórios locais e globais."
license = "MIT"
repository = "https://github.com/gildembergleite/easy-git"
readme = "README.md"
keywords = ["git", "config", "cli", "tool"]
categories = ["development-tools", "version-control"]
homepage = "https://github.com/gildembergleite/easy-git"
documentation = "https://github.com/gildembergleite/easy-git"
rust-version = "1.78"

[dependencies]
git2 = "0.18.3"
dirs = "5.0.1"
rustyline = "14.0"
termcolor = "1.4.1"
dialoguer = "0.11.0"
regex = "1.10.4"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"